Added family tree to the genealogy section.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,35 @@
             <div class="wrap">
                 <div class="gutter">
                     <h2>Heir of History</h2>
+                    <div class="family-tree">
+                        <div class="generation">
+                            <div class="person">
+                                <img src="images/kekule-4.png" alt="" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-5.png" alt="" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-6.png" alt="" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-7.png" alt="" />
+                            </div>
+                        </div>
+                        <div class="generation">
+                            <div class="person">
+                                <img src="images/kekule-2.png" alt="" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-3.png" alt="" />
+                            </div>
+                        </div>
+                        <div class="generation">
+                            <div class="person">
+                                <img src="images/kekule-1.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
                     <p>Being a genealogist, my grandfather handed on his work of decades: Five books with several thousand pages about the history of our family.
                         From Lorraine in France to the Banat in today's Serbia, across the centuries.</p>
                     <p>Currently I am working on transferring this treasure of information into a digital format.
