Removed reference to elementary OS.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         I learned French in school for four years and I engaged with Finnish for a little bit. I have a high affinity to languages.</p>
                     <p>I am an optimistic nihilist. The YouTube channel "Kurzgesagt - In a Nutshell" produced <a href="https://www.youtube.com/watch?v=MBRqu0YOH14">an appealing short film which explains it nicely</a>.
                     Summarized in one sentence: I do not believe in anything and consider human existence totally senseless beyond the purpose every individual is completely free to choose. While my purpose revolves around family I see a lot of other joyful things in life, too.</p>
-                    <p>As <a href="https://www.patreon.com/peterthomashorn/creators">a proud patron on Patreon</a> I financially support open-source software projects and creators, including <a href="https://elementary.io">elementary OS</a>.
+                    <p>As <a href="https://www.patreon.com/peterthomashorn/creators">a proud patron on Patreon</a> I financially support open-source software projects and creators.
                         I think it is important to understand that nothing in life comes for free.
                         Somebody always pays in some way for what too many people take for granted.
                         It is not just about appreciation but also about contributing to the perhaps most essential resource: time.
