Removed link to Mastodon.

--- a/index.html
+++ b/index.html
@@ -234,20 +234,19 @@
                 <div class="gutter">
                     <h2>Me Elsewhere</h2>
                     <p>The overwhelming amount of multimedia input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
-                        After using Facebook, Mastodon and Twitter for several years I drew the conclusion it is an utter waste of time.
+                        In the past I used to spend a lot time online and in a purely virtual layer of our society.
+                        After using Facebook, Mastodon, Xing and Twitter for several years I drew the conclusion it is an utter waste of time.
                         You invest attention and get nothing of worth out of it. And did I already mention how much I hate advertisement?
                         Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
                         So in the end I quit. To me it is nothing else than the capitalist counterpart to China's mass surveillance.
                         I do not want to voluntarily shovel money into the pockets of people harvesting my data.</p>
-                    <p>In the past I used to spend a lot time online and in a purely virtual layer of our society.
-                        I am glad I found my way back to focus on life off screen where the actual life happens.
-                        I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.</p>
+                    <p>I am glad that I found my way back off screen where the actual life happens.
+                        I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.
+                        Years spent with social networks yielded the realization of their full expendability once I left them.</p>
                     <p>For professional reasons I am still present on LinkedIn.
                         However I often question the sense of being there.
-                        Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
-                        Xing (a German competitor of LinkedIn) turned out to be comparable to voluntarily signing up for spam while being redundant next to LinkedIn. I deleted my account after four years at the end of 2018.</p>
+                        Engagement neither contributes to my value as a developer nor to my perception of a balanced life.</p>
                     <ul class="icons">
-                        <li><a href="https://mastodon.technology/@peterthomashorn" target="_blank" rel="me"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
                         <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
                         <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
                         <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><img src="images/envelope.svg" alt="E-Mail" class="icon" /></a></li>
