Formatted book list.

--- a/index.html
+++ b/index.html
@@ -195,14 +195,39 @@
                     <p>Though I do not like to read technical documentation or education in paper form.
                     It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in podcasts.
                     Anyway, these are important books to me which I read and often incorporate into my thoughts:</p>
-                    <ul>
-                        <li>Thus Spoke Zarathustra by Friedrich Nietzsche</li>
-                        <li>The brain that changes itself by Norma Doidge</li>
-                        <li>Ten Arguments For Deleting Your Social Media Accounts Right Now by Jaron Lanier</li>
-                        <li>All Poems by Petőfi Sándor</li>
-                        <li>Die Kunst, recht zu behalten by Arthur Schopenhauer</li>
-                        <li>What If? by Randall Munroe</li>
-                        <li>Getting Things Done by David Allen</li>
+                    <ul class="books">
+                        <li>
+                            <span class="title">Thus Spoke Zarathustra</span><br />
+                            <span class="author">by Friedrich Nietzsche</span>
+                        </li>
+                        <li>
+                            <span class="title">The brain that changes itself</span><br />
+                            <span class="author">by Norma Doidge</span>
+                        </li>
+                        <li>
+                            <span class="title">Ten Arguments For Deleting Your Social Media Accounts Right Now</span><br />
+                            <span class="author">by Jaron Lanier</span>
+                        </li>
+                        <li>
+                            <span class="title">All Poems</span><br />
+                            <span class="author">by Petőfi Sándor</span>
+                        </li>
+                        <li>
+                            <span class="title">Die Kunst, recht zu behalten</span><br />
+                            <span class="author">by Arthur Schopenhauer</span>
+                        </li>
+                        <li>
+                            <span class="title">What If?</span><br />
+                            <span class="author">by Randall Munroe</span>
+                        </li>
+                        <li>
+                            <span class="title">Getting Things Done</span><br />
+                            <span class="author">by David Allen</span>
+                        </li>
+                        <li>
+                            <span class="title">It Doesn't Have To Be Crazy At Work</span><br />
+                            <span class="author">by Jason Fried and David Heinemeier Hansson</span>
+                        </li>
                     </ul>
                 </div>
             </div>
