Resolved class name conflict.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <p>Though I do not like to read technical documentation or education in paper form.
                     It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in podcasts.
                     Anyway, these are important books to me which I read and often incorporate into my thoughts:</p>
-                    <ul class="books">
+                    <ul class="book-list">
                         <li>
                             <span class="title">Thus Spoke Zarathustra</span><br />
                             <span class="author">by Friedrich Nietzsche</span>
