Fixed typing mistake.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     I started to like the analog simplicity again. Paper books do not need to be charged with electricity.
                     They do not distract you with a thousand other features. They are still on the shelf when your computer is broken.</p>
                     <p>Though I do not like to read technical documentation or education in paper form.
-                    It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in podcasts.
+                    It is outdated too quickly, not searchable and often too verbose. I prefer condensed know-how over jabbering as it happens in podcasts.
                     Anyway, these are important books to me which I read and often incorporate into my thoughts:</p>
                     <ul class="book-list">
                         <li>
