Full width header

--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
 <body class="default-background">
     <header class="header">
         <div class="wrap">
-            <div class="gutter overlay-container">
-                <div class="header-overlay">
-                    <p>Hello, my name is</p>
-                    <h1>Peter Thomas Horn</h1>
-                    <p class="lead">I am a 28 year old world citizen who works as a software developer in Hamburg.
-                         Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
-                </div>
+            <div class="gutter">
+                <p>Hello, my name is</p>
+                <h1>Peter Thomas Horn</h1>
+                <p class="lead">I am a 28 year old world citizen who works as a software developer in Hamburg.
+                    Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
             </div>
-            <div class="header-background-image"></div>
+            <img class="portrait" src="images/portrait.jpg" />
         </div>
     </header>
     <main>
@@ -247,7 +245,7 @@
                         Years spent with social networks yielded the realization of their full expendability once I left them.</p>
                     <p>For professional reasons I am still present on LinkedIn.
                         However I often question the sense of being there.
-                        Engagement neither contributes to my value as a developer nor to my perception of a balanced life.</p>
+                        Engagement neither contributes to my value as a developer nor to my perception of a balanced life. And I constantly receive annoying contact requests from random recruiters and headhunters who want to add me to their network.</p>
                     <ul class="icons">
                         <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
                         <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
