--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="stylesheets/normalize.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/site.css">
+    <script src="site.js" type="application/javascript"></script>
 </head>
 <body class="default-background">
     <header class="header">
-        <div class="wrap">
+        <div class="wrap reveal-on-scroll">
             <div class="gutter">
                 <p>Hello, my name is</p>
                 <h1>Peter Thomas Horn</h1>
@@ -35,7 +36,7 @@
     </header>
     <main>
         <section class="section">
-            <div class="wrap">
+            <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <p>Some stereotypes about software developers do not apply to me.
                         I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
@@ -54,7 +55,7 @@
             </div>
         </section>
         <section class="section genealogy">
-            <div class="wrap">
+            <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <h2>Heir of History</h2>
                     <div class="family-tree">
@@ -94,7 +95,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="wrap">
+            <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <h2>I make music</h2>
                     <p>I regularly stray well beyond my home of extreme metal to experience other forms of audible beauty.
@@ -157,7 +158,7 @@
             </div>
         </section>
         <section class="section books">
-            <div class="wrap">
+            <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <h2>Books on my shelf</h2>
                     <p>During my childhood I read all books of Harry Potter, The Lord Of The Rings and The Hobbit multiple times.
@@ -208,7 +209,7 @@
             </div>
         </section>
         <section class="section beer">
-            <div class="wrap beer">
+            <div class="wrap beer reveal-on-scroll">
                 <div class="column">
                     <div class="gutter">
                         <h2>Beers I like</h2>
@@ -230,7 +231,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="wrap">
+            <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <h2>Me Elsewhere</h2>
                     <p>The overwhelming amount of multimedia input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
@@ -255,7 +256,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="wrap">
+        <div class="wrap reveal-on-scroll">
             <div class="gutter">
                 <p>&copy; 2019 Peter Thomas Horn.<br />This website is proudly made <em>without</em> frameworks or content management systems.</p>
             </div>
