Added background image to music section.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
                 </div>
             </div>
         </section>
-        <section class="section">
+        <section class="section music">
+            <div class="music-image-container">
+                <img src="images/music.jpg" alt="A live performance of a band I am playing in" />
+            </div>
             <div class="wrap reveal-on-scroll">
                 <div class="gutter">
                     <h2>I make music</h2>
