Added requirement note about JavaScript.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <script src="site.js" type="application/javascript"></script>
 </head>
 <body class="default-background">
+    <noscript>
+        <div class="wrap">
+            <div class="gutter">
+                ⚠️ You apparently have JavaScript disabled. You will not see much unless you enable it because it is used to toggle the visibility of elements.
+            </div>
+        </div>
+    </noscript>
     <header class="header">
         <div class="wrap reveal-on-scroll">
             <div class="gutter">
