--- a/static/index.html
+++ b/static/index.html
@@ -11,16 +11,15 @@
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://peterthomashorn.info/favicon-196x196.png" />
+    <meta property="og:image" content="./favicon-196x196.png" />
     <link rel="canonical" href="https://peterthomashorn.info" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-128x128.png" sizes="128x128" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-16x16.png" sizes="16x16" />
-    <link rel="stylesheet" href="stylesheets/normalize.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/site.css">
-    <script src="site.js" type="application/javascript"></script>
+    <link rel="icon" type="image/png" href="./favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="./favicon-128x128.png" sizes="128x128" />
+    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="main.js" type="application/javascript"></script>
 </head>
 <body class="default-background">
     <noscript>
@@ -47,7 +46,7 @@
                 <div class="gutter">
                     <p>Some stereotypes about software developers do not apply to me.
                         I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
-                        Ironically I could not care less about computer games which I abandoned a few years ago after they originally sparked my career in the age of 12.</p>
+                        Ironically I could not care less about computer games which I abandoned a few years ago after they originally sparked my career at the age of 12.</p>
                     <p>Hungarian and German are my mother tongues. My English was proven safe for international business contracts.
                         I learned French in school for four years and I engaged with Finnish for a little bit. I have a high affinity to languages.</p>
                     <p>I am an optimistic nihilist. The YouTube channel "Kurzgesagt - In a Nutshell" produced <a href="https://www.youtube.com/watch?v=MBRqu0YOH14">an appealing short film which explains it nicely</a>.
