Added missing alt attribute on portrait image element.

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
                 <p class="lead">I am a 29 year old world citizen who works as a software developer in Hamburg.
                     Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
             </div>
-            <img class="portrait" src="images/portrait.jpg" />
+            <img class="portrait" src="images/portrait.jpg" alt="A portrait of Peter Thomas Horn" />
         </div>
     </header>
     <main>
