--- a/static/index.html
+++ b/static/index.html
@@ -226,7 +226,8 @@
                             I use the mobile app Untappd to check in on mostly new beers and keep track of what I like while neglecting the social features.
                             It is funny that I could remember most of the beers I tasted until I hit the mark of 600 distinct brews after five years.<br />
                             The counting started only in 2014 when I was in Finland. A Couchsurfing host introduced me to craft beer.
-                            I did think not to like beer before I turned almost 24. It was eye opening: the world is full of tasty beer, if you look beyond the industrial mainstream brews which used to rule the markets. Five years later I brew my own beer the first time.</p>
+                            I did think not to like beer before I turned almost 24. It was eye opening: the world is full of tasty beer, if you look beyond the industrial mainstream brews which used to rule the markets.
+                            Five years later I brewed my own beer the first time.</p>
                     </div>
                 </div>
                 <div class="column">
@@ -245,7 +246,7 @@
                     <h2>Me Elsewhere</h2>
                     <p>The overwhelming amount of multimedia input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
                         In the past I used to spend a lot time online and in a purely virtual layer of our society.
-                        After using Facebook, Mastodon, Xing and Twitter for several years I drew the conclusion it is an utter waste of time.
+                        After using Facebook, Mastodon, Xing and Twitter for several years I drew the conclusion that it is an utter waste of time.
                         You invest attention and get nothing of worth out of it. And did I already mention how much I hate advertisement?
                         Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
                         So in the end I quit. To me it is nothing else than the capitalist counterpart to China's mass surveillance.
