Fixes #23: cover the whole screen while respecting safe area insets.

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Peter Thomas Horn</title>
     <meta name="description" content="I am a 28 year old world citizen who works as a software developer in Hamburg. Married to the loveliest person in the world, I like to taste craft beer and make music." />
     <meta name="robots" content="index,follow" />
