Closes #26: Added some rough numbers to the genealogy section. Added gulp watch task. Refactored stylesheet.

--- a/static/index.html
+++ b/static/index.html
@@ -95,7 +95,21 @@
                     </div>
                     <p>Being a genealogist, my grandfather handed on his work of decades: Five books with several thousand pages about the history of our family.
                         From Lorraine in France to the Banat in today's Serbia, across the centuries.</p>
-                    <p>Currently I am working on transferring this treasure of information into a digital format.
+                    <div class="counter-row">
+                        <div class="counter">
+                            <div class="counter-value">473</div>
+                            <div class="counter-label">People</div>
+                        </div>
+                        <div class="counter">
+                            <div class="counter-value">10</div>
+                            <div class="counter-label">Generations</div>
+                        </div>
+                        <div class="counter">
+                            <div class="counter-value">345</div>
+                            <div class="counter-label">Years</div>
+                        </div>
+                    </div>
+                    <p>And there are more to come. Currently I am working on transferring this treasure of information into a digital format.
                         Not just scanning the books but also registering the contained information in the app MacFamilyTree.</p>
                 </div>
             </div>
