Introduced BrowserSync for more convenient development.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,13 +11,13 @@
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./favicon-196x196.png?revision=0" />
+    <meta property="og:image" content="favicon-196x196.png?revision=0" />
     <link rel="canonical" href="https://peterthomashorn.info" />
-    <link rel="icon" type="image/png" href="../../static/favicon-196x196.png?revision=0" sizes="196x196" />
-    <link rel="icon" type="image/png" href="../../static/favicon-128x128.png?revision=0" sizes="128x128" />
-    <link rel="icon" type="image/png" href="../../static/favicon-96x96.png?revision=0" sizes="96x96" />
-    <link rel="icon" type="image/png" href="../../static/favicon-32x32.png?revision=0" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../../static/favicon-16x16.png?revision=0" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-196x196.png?revision=0" sizes="196x196" />
+    <link rel="icon" type="image/png" href="favicon-128x128.png?revision=0" sizes="128x128" />
+    <link rel="icon" type="image/png" href="favicon-96x96.png?revision=0" sizes="96x96" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png?revision=0" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png?revision=0" sizes="16x16" />
     <link rel="stylesheet" type="text/css" href="main.css?revision=0">
     <script src="main.js?revision=0" type="application/javascript"></script>
 </head>
@@ -37,7 +37,7 @@
                 <p class="lead">I am a 29 year old world citizen who works as a software developer in Hamburg.
                     Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
             </div>
-            <img class="portrait" src="../../static/images/portrait.jpg?revision=0" alt="A portrait of Peter Thomas Horn" />
+            <img class="portrait" src="images/portrait.jpg?revision=0" alt="A portrait of Peter Thomas Horn" />
         </div>
     </header>
     <main>
@@ -67,29 +67,29 @@
                     <div class="family-tree">
                         <div class="generation">
                             <div class="person">
-                                <img src="../../static/images/kekule-4.png?revision=0" alt="" />
+                                <img src="images/kekule-4.png?revision=0" alt="" />
                             </div>
                             <div class="person">
-                                <img src="../../static/images/kekule-5.png?revision=0" alt="" />
+                                <img src="images/kekule-5.png?revision=0" alt="" />
                             </div>
                             <div class="person">
-                                <img src="../../static/images/kekule-6.png?revision=0" alt="" />
+                                <img src="images/kekule-6.png?revision=0" alt="" />
                             </div>
                             <div class="person">
-                                <img src="../../static/images/kekule-7.png?revision=0" alt="" />
-                            </div>
-                        </div>
-                        <div class="generation">
-                            <div class="person">
-                                <img src="../../static/images/kekule-2.png?revision=0" alt="" />
-                            </div>
-                            <div class="person">
-                                <img src="../../static/images/kekule-3.png?revision=0" alt="" />
+                                <img src="images/kekule-7.png?revision=0" alt="" />
                             </div>
                         </div>
                         <div class="generation">
                             <div class="person">
-                                <img src="../../static/images/kekule-1.png?revision=0" alt="" />
+                                <img src="images/kekule-2.png?revision=0" alt="" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-3.png?revision=0" alt="" />
+                            </div>
+                        </div>
+                        <div class="generation">
+                            <div class="person">
+                                <img src="images/kekule-1.png?revision=0" alt="" />
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
         </section>
         <section class="section music">
             <div class="music-image-container">
-                <img src="../../static/images/music.jpg?revision=0" alt="A live performance of a band I am playing in" />
+                <img src="images/music.jpg?revision=0" alt="A live performance of a band I am playing in" />
             </div>
             <div class="wrap reveal-on-scroll">
                 <div class="gutter">
@@ -246,7 +246,7 @@
                 </div>
                 <div class="column">
                     <figure>
-                        <img src="../../static/images/weihenstephan.jpg?revision=0" alt="Me holding a beer mug." />
+                        <img src="images/weihenstephan.jpg?revision=0" alt="Me holding a beer mug." />
                         <figcaption>On this picture you see me in the Bavarian State Brewery Weihenstephan.
                             It is the oldest still existing brewery in the world and I was born a short stroll away from there.
                             When travelling I like to stop by notable breweries.</figcaption>
@@ -272,8 +272,8 @@
                         However I often question the sense of being there.
                         Engagement neither contributes to my value as a developer nor to my perception of a balanced life. And I constantly receive annoying contact requests from random recruiters and headhunters who want to add me to their network.</p>
                     <ul class="icons">
-                        <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="../../static/images/github.svg?revision=0" alt="GitHub" class="icon" /></a></li>
-                        <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="../../static/images/linkedin.svg?revision=0" alt="LinkedIn" class="icon" /></a></li>
+                        <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg?revision=0" alt="GitHub" class="icon" /></a></li>
+                        <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg?revision=0" alt="LinkedIn" class="icon" /></a></li>
                     </ul>
                 </div>
             </div>
