Added A Világ Leggazdagabb Verebe to the book list.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -216,6 +216,10 @@
                             <span class="author">by Arthur Schopenhauer</span>
                         </li>
                         <li>
+                            <span class="title">A Világ Leggazdagabb Verebe</span><br />
+                            <span class="author">Eduard Petiška, Zdeněk Miler</span>
+                        </li>
+                        <li>
                             <span class="title">What If?</span><br />
                             <span class="author">by Randall Munroe</span>
                         </li>
