Fixes #30: Removed JavaScript
Removed all (of the few lines) of JavaScript. Updated packages.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,6 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png?revision=0" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png?revision=0" sizes="16x16" />
     <link rel="stylesheet" type="text/css" href="main.css?revision=0">
-    <script src="main.js?revision=0" type="application/javascript"></script>
 </head>
 <body class="default-background">
     <noscript>
@@ -30,7 +29,7 @@
         </div>
     </noscript>
     <header class="header">
-        <div class="wrap reveal-on-scroll">
+        <div class="wrap">
             <div class="gutter">
                 <p>Hello, my name is</p>
                 <h1>Peter Thomas Horn</h1>
@@ -42,7 +41,7 @@
     </header>
     <main>
         <section class="section">
-            <div class="wrap reveal-on-scroll">
+            <div class="wrap">
                 <div class="gutter">
                     <p>Some stereotypes about software developers do not apply to me.
                         I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
@@ -62,7 +61,7 @@
             </div>
         </section>
         <section class="section genealogy">
-            <div class="wrap reveal-on-scroll">
+            <div class="wrap">
                 <div class="gutter">
                     <h2>Heir of History</h2>
                     <div class="family-tree">
@@ -119,7 +118,7 @@
             <div class="music-image-container">
                 <img src="images/music.jpg?revision=0" alt="A live performance of a band I am playing in" />
             </div>
-            <div class="wrap reveal-on-scroll">
+            <div class="wrap">
                 <div class="gutter">
                     <h2>I make music</h2>
                     <p>I regularly stray well beyond my home of extreme metal to experience other forms of audible beauty.
@@ -182,7 +181,7 @@
             </div>
         </section>
         <section class="section books">
-            <div class="wrap reveal-on-scroll">
+            <div class="wrap">
                 <div class="gutter">
                     <h2>Books on my shelf</h2>
                     <p>During my childhood I read all books of Harry Potter, The Lord Of The Rings and The Hobbit multiple times.
@@ -237,7 +236,7 @@
             </div>
         </section>
         <section class="section beer">
-            <div class="wrap beer reveal-on-scroll">
+            <div class="wrap beer">
                 <div class="column">
                     <div class="gutter">
                         <h2>Beers I like</h2>
@@ -260,7 +259,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="wrap reveal-on-scroll">
+            <div class="wrap">
                 <div class="gutter">
                     <h2>Me Elsewhere</h2>
                     <p>The overwhelming amount of multimedia input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
@@ -285,9 +284,9 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="wrap reveal-on-scroll">
+        <div class="wrap">
             <div class="gutter">
-                <p>&copy; 2019 Peter Thomas Horn.<br />This website is proudly made <em>without</em> frameworks or content management systems.</p>
+                <p>&copy; 2020 Peter Thomas Horn.<br />This website is proudly made <em>without</em> frameworks or content management systems.</p>
             </div>
         </div>
     </footer>
